[package]
name = "dsp-calculator"
version = "0.1.0"
edition = "2021"
authors = ["HuangFuSL <huangfusl@outlook.com>"]
description = "Dyson Sphere Program Calculator"
license = "MIT"
repository = "https://github.com/HuangFuSL/dsp-calculator"
readme = "README.md"
keywords = ["rust", "dyson sphere program"]

[profile.dist]
opt-level = 3
debug = false
overflow-checks = true
lto = true
inherits = "dev"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.10.0", features = ["advanced", "image"] }
phf = { version = "0.11.2", features = ["macros"] }
